<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".MainActivity">

    <ImageButton
        android:id="@+id/kamien"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginStart="20dp"
        android:contentDescription="@string/kamien"
        android:onClick="Kamien"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@mipmap/kamien_foreground" />

    <EditText
        android:id="@+id/plain_text_input"
        android:layout_width="253dp"
        android:layout_height="41dp"
        android:inputType="text"
        android:selectAllOnFocus="true"
        android:singleLine="true"
        app:layout_constraintBottom_toTopOf="@+id/odpowiedz"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.13999999" />

    <ImageButton
        android:id="@+id/nozyce"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:layout_marginEnd="20dp"
        android:contentDescription="@string/nozyce"
        android:onClick="Nozyce"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@mipmap/nozyce_foreground" />

    <ImageButton
        android:id="@+id/papier"
        android:layout_width="100dp"
        android:layout_height="100dp"
        android:contentDescription="@string/Title"
        android:onClick="Papier"
        android:visibility="visible"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toStartOf="@+id/nozyce"
        app:layout_constraintStart_toEndOf="@+id/kamien"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.7"
        app:srcCompat="@mipmap/papier_foreground" />

    <TextView
        android:id="@+id/przegrane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/przegrane"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.75"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/kamien"
        tools:text="Przegrane\n0" />

    <TextView
        android:id="@+id/wygrane"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/wygrane"
        android:textAlignment="center"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.25"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/nozyce"
        tools:text="Wygrane\n0" />

    <TextView
        android:id="@+id/tytul"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/kamie_papier_no_yce"
        android:textSize="30sp"
        android:textStyle="bold"
        app:layout_constraintBottom_toTopOf="@+id/papier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="0.25" />

    <TextView
        android:id="@+id/odpowiedz"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/czekam_na_wyb_r"
        app:layout_constraintBottom_toTopOf="@+id/papier"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/tytul" />

</androidx.constraintlayout.widget.ConstraintLayout>